--- a/StockSense/package.json
+++ b/StockSense/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@supabase/supabase-js": "^1.35.6",
     "events": "^3.3.0",
+    "lightweight-charts": "^5.0.7",
     "node-libs-react-native": "^1.2.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
